# my-first-crawler

./: .gitignore  pyproject.toml
my_first_crawler/: manage.py
my_first_crawler/my_first_crawler/: asgi.py  settings.py  urls.py  wsgi.py
my_first_crawler/tests/website_crawler/: test_parser.py  test_scraper.py  test_usecase.py
my_first_crawler/website_crawler/: apps.py  parser.py  scraper.py  usecase.py
my_first_crawler/website_crawler/management/commands/: hoge.py
