[tool.poetry]
name = "my-first-crawler"
version = "0.1.0"
description = ""
authors = ["kazuki.morozumi <kazuki.m777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
django-extensions = "^3.1.3"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
